intex damit container nicht gestoppt wird